# TravelCompanion_WechatMiniProgram

./: .gitignore  README.md  start_uvicorn.bat
backEnd/: README.md  logs.txt  pyproject.toml  requirements.txt  start_uvicorn_dev.ps1  start_uvicorn_dev.sh  start_uvicorn_prod.ps1  start_uvicorn_prod.sh  trigger_uvicorn_service.py
backEnd/app/: database.py  main.py  models.py
backEnd/app/routers/: account_router.py  db_router.py  login_router.py  logs_router.py  planGen_router.py  routeGen_router.py  user_router.py
backEnd/app/utils/: auth_utils.py  cos_utils.py  crypt.py  encryption.py  exceptions.py  jwt_handler.py  keyManager.py  logger.py  redis_utils.py  type_utils.py  upload.py  user.py
backEnd/config/: db_config.py
frontEnd/: app.js  app.json  app.miniapp.json  fide.project.config.json  jsconfig.json  package-lock.json  package.json  project.config.json  project.miniapp.json
frontEnd/assets/fonts/: iconfont.css  iconfont.js  iconfont.json
frontEnd/components/privacyPopup/: privacyPopup.js  privacyPopup.wxml  privacyPopup.wxss
frontEnd/i18n/: base.json
frontEnd/miniapp/android/: i18nInfo.json
frontEnd/pages/ai-chat/: ai-chat.js  ai-chat.json  ai-chat.wxml  ai-chat.wxss
frontEnd/pages/chatspace/: chatspace.js  chatspace.wxml  (+1 more)
frontEnd/typings/: wx.d.ts
frontEnd/utils/: callCheckUtils.js  crypto-helper.js  logger.js  loggerUtils.js  loginUtils.js  requestUtils.js  userUtils.js  versionUtils.js
travel_companion_system/: requirements.txt
travel_companion_system/app/: database.py  main.py
travel_companion_system/config/: db_config.py
(+43 files in other folders)
